# ros1_robotic-projects

./: .gitignore  README.md  book.toml
src/: SUMMARY.md  ebot.urdf  learn.md
src/Additional_Sections/: configuring_your_ros_environment.md  creating_a_launch_file.md  introducing_turtlesim_and_rqt.md  main.md  recording_and_playing_back_data.md  ros_actions.md  ros_nodes.md  ros_parameters.md  ros_services.md  ros_topics.md  using_rqt_console.md
src/ROS_Basics_with_Turtlesim/: main.md
src/ROS_Basics_with_Turtlesim/Miscellaneous/: main.md  plot_juggler.md  ros_bags.md  rqt_graph.md
src/ROS_Basics_with_Turtlesim/ROS_Communication/: main.md
src/ROS_Basics_with_Turtlesim/ROS_Launch_Files/: create_a_ros_launch_file.md  launch_shell_script_and_ros_node.md  launch_turtle_in_forest.md  launch_two_ROS_nodes.md  launch_two_ros_nodes.md  load_yaml.md  main.md  web_node.launch
src/ROS_Basics_with_Turtlesim/ROS_Master/: main.md
src/ROS_Basics_with_Turtlesim/ROS_Nodes/: command_rosnode.md  command_rosrun.md  create_a_ros_node.md  main.md
src/ROS_Basics_with_Turtlesim/ROS_Package/: create_a_ROS_package  create_a_ros_package.md  main.md
src/ROS_Basics_with_Turtlesim/ROS_Parameter_Server/: config_my.yaml  load_parameters_using_yaml_file.md  main.md  ros_node_to_get_and_set_parameters.md
src/ROS_Basics_with_Turtlesim/ROS_TF/: main.md  ros_tf_using_turtlesim.md
src/ROS_Basics_with_Turtlesim/ROS_Workspace/: ROS_Workspace.md  create_a_catkin_workspace.md  main.md
src/ROS_with_Gazebo/: main.md
src/ROS_with_Gazebo/Gazebo_Plugins/: main.md
src/ROS_with_Gazebo/Gazebo_Simulator/: main.md
src/ROS_with_Gazebo/XACRO/: main.md
src/ebot_nav/: package.xml
src/ebot_nav/config/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params_map.yaml  local_costmap_params.yaml  move_base_params.yaml  rviz_config.rviz
src/ebot_nav/launch/: autonomous_nav.launch  ebot_amcl.launch  ebot_map_provider.launch
src/ebot_nav/maps/: map_task2.yaml
src/ebot_nav/scripts/: goal.py
src/micromouse/: CMakeLists.txt  package.xml
src/micromouse/bag_files/: .~lock.results.csv#  mm3.bag  results.csv
src/micromouse/config/: diff_drive.yaml  go_to_pose.yaml  joints.yaml  pos_control.yaml  velocity_control.yaml
src/micromouse/launch/: gazebo.launch  micromouse.launch  micromouse_go_to_point.launch  micromouse_simple.launch  micromouse_solution.launch  micromouse_vc_demo.launch  micromouse_world.launch  micromouse_world1.launch  micromouse_world2.launch  micromouse_world3.launch  rviz.launch  wall_follow.launch
src/micromouse/rviz/: rviz_config.rviz
src/micromouse/scripts/: autoeval.py  cmd_vel_robot.py  maze_algorithms.py  maze_solver.py  node_follow_wall.py  node_go_to_point.py  node_maze_runner.py  node_maze_solver.py  node_micromouse.py  node_obstacle_avoidance.py  (+4 more)
src/pkg_gazebo/: CMakeLists.txt  package.xml
src/pkg_gazebo/bag_files/: .~lock.results.csv#  results.csv
src/pkg_gazebo/config/: effort_control.yaml
src/pkg_gazebo/launch/: bowling_game.launch  bowling_game_one_pin.launch  bowling_game_solution.launch
src/pkg_gazebo/models/bowling_alley/: model.config  model.sdf
src/pkg_gazebo/models/bowling_alley/meshes/: bowling-alley-collision.mtl  bowling-alley.mtl
src/pkg_gazebo/models/bowling_pin/: model.config  model.sdf
src/pkg_gazebo/models/bowling_pin/meshes/: bowling-pin.mtl
src/pkg_gazebo/models/bowling_pin_black/: model.config  model.sdf
src/pkg_gazebo/models/bowling_pin_black/meshes/: bowling-pin-black.mtl
src/pkg_gazebo/scripts/: autoeval.py  node_bowling_pin_cam.py  node_control_bowling_ball.py
src/pkg_gazebo/urdf/: bowling_ball_bot.gazebo  bowling_ball_bot.urdf.xacro
src/pkg_gazebo/worlds/: bowling_empty.world  bowling_game.world  bowling_game_one.world
src/pkg_ros_basics/: package.xml
src/pkg_simbha_bot/: CMakeLists.txt  package.xml
src/pkg_task0/: CMakeLists.txt  package.xml
src/pkg_vb_solution/: CMakeLists.txt  package.xml  setup.py
src/pkg_vb_task/: CMakeLists.txt  package.xml
src/tasks/: expected-output.md  main.md
(+125 files in other folders)
